# ChatResearch

./: .gitignore  CommmonQueries.txt  DBCreateQueries.txt  Recreating Test DB.sql  ServerStack.sln  ServerStack2005.sln  ServerStack2008.sln  SolutionReadMe.txt  build_all.sh  kill_stack.bat  launch_LB_and_3gateway3.bat  launch_LB_and_3gateways.bat  launch_chat.bat  launch_chat_rewrite.bat  launch_gateway.bat  launch_gateway_chat_only.bat  launch_load_balancer.bat  launch_login.bat  launch_stack.bat  launch_stack_3_gateways.bat  launch_stack_assets.bat  launch_stack_copied_from_deployment.bat  launch_stack_no_asset.bat  launch_stack_notification.bat  launch_stack_on_test_server.bat  launch_stack_purchase.bat  launch_stack_release.bat  launch_stack_with_slowness.bat  port_config.xlsx  test_launch_remote.bat
Accounts/: AccountServer.h  Accounts.cpp  Accounts.vcproj  Accounts2005.vcproj  BlankUUIDQueryHandler.cpp  BlankUUIDQueryHandler.h  BlankUserProfileHandler.cpp  BlankUserProfileHandler.h  Change_UserEmail.html  Format_Email.html  Makefile.am  NewAccountQueryHandler.cpp  NewAccountQueryHandler.h  ProductEntryCreateBasedOnPlayHistory.cpp  ProductEntryCreateBasedOnPlayHistory.h  ReadMe.txt  ResetPasswordQueryHandler.cpp  ResetPasswordQueryHandler.h  ResetUserEmailQueryHandler.cpp  ResetUserEmailQueryHandler.h  Reset_Password.html  StatusUpdate.cpp  StatusUpdate.h  configure.ac  email.cpp  email.h
Accounts/text/: Change_UserEmail.html  Format_Email.html  Reset_Password.html  account_created.php  dragon_bash.html  dragon_bash_crap.html  email_confirmation.html  format_email_new.html  (+4 more)
Analytics/: Analytics.cpp  Analytics.vcproj  AnalyticsCommon.cpp  AnalyticsCommon.h  AnalyticsMainLoop.cpp  AnalyticsMainLoop.h  ConnectorAnalytics.cpp  ConnectorAnalytics.h  Makefile.am  ReadMe.txt  configure.ac
AssetDelivery/: AssetCommon.h  AssetDelivery.cpp  AssetDelivery.vcproj  AssetDelivery2005.vcproj  AssetMainThread.cpp  AssetMainThread.h  AssetOrganizer.cpp  AssetOrganizer.h  DiplodocusAsset.cpp  DiplodocusAsset.h  KhaanAsset.cpp  KhaanAsset.h  Makefile.am  ReadMe.txt  UserAccountAssetDelivery.cpp  UserAccountAssetDelivery.h  configure.ac
Chat/: Chat.cpp  Chat.vcproj  Chat2005.vcproj  ChatChannel.cpp  ChatChannel.h  ChatChannelDbJob.cpp  ChatChannelDbJob.h  ChatChannelManager - Copy.cpp  ChatChannelManager - Copy.h  ChatChannelManager.cpp  ChatChannelManager.h  ChatRoom.cpp  ChatRoom.h  ChatRoomDbJob.cpp  ChatRoomDbJob.h  ChatRoomManager.cpp  ChatRoomManager.h  ChatUser.cpp  ChatUser.h  DiplodocusChat.cpp  DiplodocusChat.h  InvitationManager.cpp  InvitationManager.h  KhaanChat.cpp  KhaanChat.h  Makefile.am  ReadMe.txt  UserConnection.cpp  UserConnection.h  UserInChatChannel.cpp  UserInChatRoom.cpp  UserInChatRoom.h  UsersChatChannelList.cpp  UsersChatChannelList.h  UsersChatRoomList.cpp  UsersChatRoomList.h  configure.ac
Contacts/: Contacts.cpp  Contacts.vcproj  Contacts2005.vcproj  DiplodocusContact.cpp  DiplodocusContact.h  KhaanContact.cpp  KhaanContact.h  Makefile.am  ReadMe.txt  UserContact.cpp  UserContact.h  UserLookupManager.cpp  UserLookupManager.h  configure.ac
Gateway/: DiplodocusGateway.cpp  DiplodocusGateway.h  ErrorCodeLookup.cpp  ErrorCodeLookup.h  FruitadensGateway.cpp  FruitadensGateway.h  Gateway.cpp  Gateway.vcproj  Gateway2005.vcproj  GatewayCommon.h  KhaanConnector.cpp  KhaanConnector.h  KhaanGateway.cpp  KhaanGateway.h  MainGatewayThread.cpp  MainGatewayThread.h  Makefile.am  ServiceAvailabilityManager.cpp  ServiceAvailabilityManager.h  configure.ac
GatewayIntegratedLibevent/: DiplodocusGateway.h  FruitadensGateway.cpp  FruitadensGateway.h  Gateway.cpp  Gateway.sln  Gateway.vcproj  KhaanGateway.cpp  KhaanGateway.h  ReadMe.txt  configure.ac
LoadBalancer/: DiplodocusLoadBalancer.cpp  DiplodocusLoadBalancer.h  KhaanConnector.cpp  KhaanConnector.h  LoadBalancer.cpp  LoadBalancer.vcproj  LoadBalancer2005.vcproj  Makefile.am  ReadMe.txt  configure.ac
Login/: ConnectionToUser.cpp  ConnectionToUser.h  CreateAccountResultsAggregator.cpp  CreateAccountResultsAggregator.h  DiplodocusLogin.cpp  DiplodocusLogin.h  FruitadensLogin.cpp  FruitadensLogin.h  KhaanLogin.cpp  KhaanLogin.h  Login.cpp  Login.vcproj  Login2005.vcproj  LoginCommon.h  LoginMainThread.cpp  LoginMainThread.h  Makefile.am  ProductInfo.h  ProductManager.cpp  ProductManager.h  ReadMe.txt  ScheduledOutageDBReader.cpp  ScheduledOutageDBReader.h  UserLogin.cpp  UserLogin.h  configure.ac  email.cpp
Notification/: Makefile.am  Notification.cpp  Notification.vcproj  NotificationCommon.h  NotificationMainThread.cpp  NotificationMainThread.h  NotificationSender.cpp  NotificationSender.h  ReadMe.txt  UserConnection.cpp  UserConnection.h  configure.ac  core_types.h  server_comms.h  server_log.cpp  server_notify.h  server_notify_android.cpp  server_notify_ios.cpp  string_funcs.cpp  string_funcs.h
PacketLibrary/: Makefile.am  PacketLibrary.vcproj  PacketLibrary2005.vcproj  ReadMe.txt  configure.ac
Purchase/: DiplodocusPurchase.cpp  DiplodocusPurchase.h  KhaanPurchase.cpp  KhaanPurchase.h  Makefile.am  Purchase.cpp  Purchase.vcproj  Purchase2005.vcproj  PurchaseMainThread.cpp  PurchaseMainThread.h  PurchaseReceiptManager.cpp  PurchaseReceiptManager.h  ReadMe.txt  SalesManager.cpp  SalesManager.h  StringLookup.cpp  StringLookup.h  StringLookup.txt  ThreadedReceiptValidator.cpp  ThreadedReceiptValidator.h  UserAccountPurchase.cpp  UserAccountPurchase.h  configure.ac  stdafx.cpp
Stat/: DiplodocusStat.cpp  DiplodocusStat.h  KhaanStat.cpp  KhaanStat.h  Makefile.am  Stat.cpp  Stat.vcproj  Stat2005.vcproj  StatsCommon.cpp  StatsCommon.h
UserStats/: Makefile.am  ReadMe.txt  UserStats.cpp  UserStats.vcproj  UserStatsMainThread.cpp  UserStatsMainThread.h  configure.ac  server_rating_glicko2.cpp  server_rating_glicko2.h  server_stats_agricola.cpp  server_stats_ascension.cpp  server_stats_fluxx.cpp  server_stats_foodfight.cpp  server_stats_nightfall.cpp  server_stats_pennyarcade.cpp  server_stats_plugins.cpp  server_stats_plugins.h  server_stats_summonwar.cpp  server_stats_tantocuore.cpp  server_stats_waterdeep.cpp
(+465 files in other folders)
